tests/functional/lang/parse-fail-dup-attrs-1.err.exp
error: attribute 'x' already defined at /pwd/parse-fail-dup-attrs-1.nix:1:3
       at /pwd/parse-fail-dup-attrs-1.nix:3:3:
            2|   y = 456;
            3|   x = 789;
             |   ^
            4| }
